--- a/css/custom.css
+++ b/css/custom.css
@@ -79,9 +79,19 @@ body.fade-in .show-first, body.fade-in .show-second, body.fade-in .show-third, b
   transform: translateX( -70% ); 
 }
 
+#marquee {
+  color: black;
+  text-shadow:
+		-1px -1px 0 #ffffff,
+		1px -1px 0 #ffffff,
+		-1px 1px 0 #ffffff,
+		1px 1px 0 #ffffff;
+  
+}
 
 
 .f-headliner { font-size: 30vw; }
 .f-headliner-ns { font-size: 20vw; }
+
 
 
