--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
 
 .terminal {
     min-width: 300px;
-    width: 500px;
+    max-width: 500px;
     margin: 0;
     padding: 16px 24px 0 24px;
 }
