--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 }
 
 .receipt {
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: flex-start;  
@@ -172,6 +173,7 @@ a {
 }
 
 .tear-top {
+  background-color: #000000;
   margin: 0;
   padding: 0;
   display: flex;
