--- a/style.css
+++ b/style.css
@@ -213,6 +213,9 @@ a {
     transform: translateY(20px);
     opacity: 0;
   }
+  50% {
+    opacity: 1;
+  }
   100% {
     transform: translateY(0);
     opacity: 1;
