--- a/style.css
+++ b/style.css
@@ -19,26 +19,24 @@ body {
 }
 
 .receipt {
-  max-width: 367px;
+  max-width: 390px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;  
   opacity: 0;
   animation: fadeInSlideTilt 1s ease-out forwards;
-  margin: 48px 0;
+  margin: 48px 0 0 0;
 }
 
 /* Media query for screens less than 500px */
 @media (max-width: 500px) {
   body {
     justify-content: flex-start;
-    padding-top: 24px; /* Optional: gives breathing room */
   }
 
   .receipt {
     margin: 24px 16px; /* Horizontal padding */
     width: calc(100% - 32px); /* Ensures width respects margins */
-    max-width: 367px;
   }
 }
 
