--- a/style.css
+++ b/style.css
@@ -25,22 +25,10 @@ body {
   flex-direction: column;
   align-items: flex-start;  
   opacity: 0;
-  animation: fadeInSlideTilt 1s ease-out forwards;
+  animation: fadeInSlideTilt .5s ease-out forwards;
   margin: 48px 0 24px 0;
 }
 
-/* Media query for screens less than 500px */
-@media (max-width: 500px) {
-  body {
-    justify-content: flex-start;
-    height: 100vh; /* Ensures body takes full viewport height */
-  }
-
-  .receipt {
-    margin: 24px 16px; /* Horizontal padding */
-    width: calc(100% - 32px); /* Ensures width respects margins */
-  }
-}
 
 .headerfooter {
   display: flex;
@@ -210,14 +198,41 @@ a {
 
 @keyframes fadeInSlideTilt {
   0% {
-    transform: translateY(20px);
+    transform: translateY(80px);
     opacity: 0;
   }
-  50% {
+  60% {
     opacity: 1;
   }
   100% {
-    transform: translateY(0);
+    transform: translateY(0) rotate(-1.25deg); /* Added tilt */
     opacity: 1;
+  }
+}
+
+/* Media query for screens less than 500px */
+@media (max-width: 500px) {
+  body {
+    justify-content: flex-start;
+    height: 100vh; /* Ensures body takes full viewport height */
+  }
+
+  .receipt {
+    margin: 24px 16px; /* Horizontal padding */
+    width: calc(100% - 32px); /* Ensures width respects margins */
+  }
+
+  @keyframes fadeInSlideTilt {
+    0% {
+      transform: translateY(50px);
+      opacity: 0;
+    }
+    60% {
+      opacity: 1;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
   }
 }
