--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   flex-direction: column;
   align-items: flex-start;  
   opacity: 0;
-  animation: fadeInSlideTilt .5s ease-out forwards;
+  animation: fadeInSlideTilt .5s ease-in-out forwards;
   margin: 48px 0 24px 0;
 }
 
@@ -51,7 +51,7 @@ text-align: center;
 }
 
 .card {
-  background: white;
+  background: #fdfdfd;
   align-self: stretch;
   display: flex;
   padding: 48px 16px 37px 16px;
@@ -165,7 +165,7 @@ a {
 }
 
 .tear-bottom {
-  background-color: white;
+  background-color: #fdfdfd;
   margin: -1px 0 0 0;
   padding: 0;
   display: flex;
